<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorMain"
    android:padding="@dimen/padding_main"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/etLatitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/hint_latitud"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etLongitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="114dp"
        android:ems="10"
        android:hint="@string/hint_longitud"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnConsultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/Colorboton"
        android:onClick="consultar"
        android:text="@string/btn_consultar" />

</RelativeLayout>