<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlTiempo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorTiempo"
    android:padding="@dimen/padding_main"
    tools:context=".TiempoActivity">

    <TextView
        android:id="@+id/tvZona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="Zona"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivFoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/tvHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="171dp"
        android:text="TextView"
        android:textColor="?attr/colorBackgroundFloating"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTemperatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="228dp"
        android:text="@string/tv_temperatura"
        android:textColor="@android:color/background_light"
        android:textSize="85sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvHumedad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginBottom="185dp"
        android:text="@string/tv_humedad"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_lluvia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvHumedad"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="93dp"
        android:layout_marginRight="93dp"
        android:layout_marginBottom="0dp"
        android:text="@string/tv_lluvia"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvValorHumedad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="94dp"
        android:layout_marginLeft="94dp"
        android:layout_marginBottom="135dp"
        android:text="@string/tv_valor_humedad"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvValorLluvia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvValorHumedad"
        android:layout_marginStart="-18dp"
        android:layout_marginBottom="-1dp"
        android:layout_toEndOf="@+id/tvZona"
        android:text="@string/tv_valor_lluvia"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginLeft="-18dp"
        android:layout_toRightOf="@+id/tvZona" />

    <TextView
        android:id="@+id/tvSumario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:text="@string/tv_sumario"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />
</RelativeLayout>